# DEF-W9-31_Thermal-SLAM

./: .env.serve  .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: MAP.md
benchmarks/: README.md
configs/: debug.toml  default.toml  paper.toml
docker/: Dockerfile.serve  docker-compose.serve.yml
docs/: eval_report_template.md  production_plan.md  ros2_topics.md
papers/: 2603.14998.txt
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-03-loss-functions.md  PRD-04-evaluation.md  PRD-04-training-pipeline.md  PRD-05-api-docker.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-06-ros2-integration.md  PRD-07-integration.md  PRD-07-production.md  README.md
scripts/: evaluate.py  profile_infer.py  run_infer.sh  train.py
src/anima_thermal_slam/: __init__.py  api.py  config.py  eval.py  infer.py  losses.py  ros2_node.py  slam_adapter.py  train.py
src/anima_thermal_slam/data/: __init__.py  dataset.py
src/anima_thermal_slam/models/: __init__.py  (+5 more)
src/thermal_slam/: __init__.py  cuda_ops.py  dataset.py  evaluate.py  losses.py  model.py  serve.py  train.py  train_cu.py  utils.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0701.md
tests/: test_config.py  test_dataset.py  test_eval.py  test_evaluate.py  test_model.py  test_serve.py  test_utils.py
